docs/.vuepress/styles/index.scss
/* ---------------------------------
   Font Settings
--------------------------------- */

@font-face {
  font-family: 'Tmoney RoundWind';
  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/TmoneyRoundWindRegular.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}

@font-face {
    font-family: 'Tmoney RoundWind';
    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/pretendard@1.0/Pretendard-Bold.woff2') format('woff2');
    font-weight: bold;
    font-display: swap;
}

@font-face {
    font-family: 'goorm-sans-code';
    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/2408@1.0/goorm-sans-code.woff2') format('woff2');
    font-weight: normal;
    font-display: swap;
}

@import url('//cdn.jsdelivr.net/gh/wan2land/d2coding/d2coding-ligature-full.css');

@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");

/* ---------------------------------
   Base Font Assignments
--------------------------------- */

body, .built-with, .vp-footer .copyright, .vp-sidebar, .vp-sidebar-item {
  font-family: 'Pretendard';
}

p, li {
  font-family: 'Tmoney RoundWind';
}

table {
  font-family: 'Pretendard';
  font-size: 0.9em;
}

pre, code, div[class*='language-'] {
  font-family: 'D2Coding Ligature', 'D2Coding', monospace;
}

pre {
  border: 1px solid;
  border-color: #e555;
}

/* ---------------------------------
   Base Style Overrides
--------------------------------- */

:root {
  --navbar-height: 3rem;
  --vp-c-text: #000;
  --vp-c-gutter: #aaa;
  --vp-c-accent: #fc6525;
  --vp-c-accent-bg: #fc6525;
  --code-c-bg: transparent;
  --code-c-line-number: #777;
  --code-c-text: --vp-c-text;
  --copy-code-c-hover: transparent;
  --code-line-number-width: 1.2rem;
  --code-line-height: 1.2rem;
  --code-font-size: 0.9rem;
}

pre:not([copy-code]) {
  line-height: 0.7rem;
  padding: 16px;
  width: fit-content;
  margin-left: auto;
  margin-right: auto;
  display: block;
  font-size: 0.7em;
}

div[class*=language-].line-numbers-mode .line-numbers {
  text-align: right;
  left: -0.5rem;
  --code-font-size: 0.7rem;
}

.vp-page [vp-content] {
  padding: 0 1rem;
}

[vp-content] img:not([src^="http"]) {
  max-height: 320px;
  height: auto;
  display: block;
  margin: 0 auto;
}

.hint-container {
  margin: 0;
}

.vp-navbar {
  position: fixed;
  display: flex;
  align-items: center;
}

.vp-back-to-top-button {
    bottom: 1rem;
}

.vp-toggle-sidebar-button {
  top: 50%;
  transform: translateY(-50%);
}

.vp-navbar .vp-site-logo {
  position: absolute;
  left: 50%;
  height: 28px;
  transform: translate(-50%, -50%);
}

.vp-copy-code-button {
  background: var(--vp-c-bg) !important;
  border-color: #555;
}

.vp-code-tabs-nav {
  background: transparent;
}

img {
  border-radius: 6px;
}

.tech-logos img {
  border-radius: 0;
}

.theme-default-content h2 {
  border-bottom: 1px solid var(--vp-c-gutter);
}

a.header-anchor::before {
  content: "#";
  top: 0.2rem;
  left: -0.65em;
  font-size: 0.75em;
}

th, td {
  padding: .3em .4em;
}

/* ---------------------------------
   Footer and Meta Area
--------------------------------- */

.vp-footer {
  max-width: 740px;
  margin: 0 !important;
  padding: 1rem 0;
}

.vp-page-meta,
.vp-page-nav {
  display: none;
}

.vp-code-tab-nav {
  color: #999;
}

.vp-code-tab-nav.active {
  color: var(--vp-c-text);
}

/* ---------------------------------
   Color Variables
--------------------------------- */

html[data-theme='dark'] {
  --vp-c-bg: #111;
  --vp-c-text: #eee;
  --vp-c-gutter: #444;
  --vp-c-text-mute: #bbb;
}

table {
  --vp-c-bg-alt: transparent;
}

div[class*='language-'].line-numbers-mode:after {
  border: none;
}

html[data-theme='dark'] img[src$=".png"]:not([src^="http"]) {
  filter: invert(1) hue-rotate(180deg) contrast(0.9) brightness(1.3);
}

html[data-theme="light"] .token {
    filter: invert(1) hue-rotate(180deg) contrast(1.5) brightness(0.7);
}

/* ---------------------------------
   Responsive (Mobile)
--------------------------------- */

@media (max-width: 419px) {
  #content > .vp-code-tabs .vp-code-tabs-nav,
  pre, div[class^="language-"] {
    margin-inline: -0.5rem !important;
  }
  div[class*=language-].line-numbers-mode pre {
    margin-left: 1rem !important;
  }
}

.vp-sidebar {
  top: 0;
  padding-top: calc(var(--navbar-height) - 1rem);
}

@media (max-width: 1060px) {
  .vp-sidebar {
    transform: translateX(-100%);
  }

  .sidebar-open .vp-sidebar {
    transform: translateX(0);
  }

  .vp-toggle-sidebar-button {
    display: block;
  }

  .vp-page {
    padding-inline-start: 0;
  }
}

/* ---------------------------------
   Print Settings
--------------------------------- */

@media print {
  @page {
    size: auto;
  }

  :root {
    --navbar-height: 0;
    --code-line-number-width: 0rem;
  }

  .vp-navbar,
  .vp-sidebar,
  .vp-page-nav,
  .vp-footer,
  .vp-footer-wrapper {
    display: none;
  }

  .vp-page {
    padding: 0;
  }

  [vp-content] h1, [vp-content] h2, [vp-content] h3, [vp-content] h4, [vp-content] h5, [vp-content] h6 {
    margin-top: 0rem;
    padding-top: 0rem;
    margin-bottom: 1rem;
    padding-bottom: 0rem;
  }

  [vp-content] h2 {
    padding-top: 1rem;
  }

  div[class*=language-].line-numbers-mode .line-numbers {
    visibility: hidden;
  }
}

